bug 7724 making the cell text and header text right aligned for time/duration r=mig,matt
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@8350 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/bindings/playlist.css
+++ b/app/skin/bindings/playlist.css
@@ -335,6 +335,21 @@ Playing track indicator
 
 /** 
 *******************************************************************************
+Time/Duration Column
+*******************************************************************************
+*/
+treecol[bind="http://songbirdnest.com/data/1.0#duration"]
+{
+  text-align:right;
+}
+treecol[bind="http://songbirdnest.com/data/1.0#duration"] > label,
+.sb-playlist-tree > treechildren::-moz-tree-cell-text( http-songbirdnest-com-data-1-0-duration )
+{
+  padding-right:5px;
+}
+
+/** 
+*******************************************************************************
 Playlist Commands
 *******************************************************************************
 */
